[frio] Fix double wrapping on all /contact/* pages

--- a/view/theme/frio/css/style.css
+++ b/view/theme/frio/css/style.css
@@ -2244,7 +2244,7 @@ ul.dropdown-menu li:hover {
  * PAGES
  *********/
 
-.generic-page-wrapper, .contact-content-wrapper, .videos-content-wrapper,
+section > .generic-page-wrapper, .videos-content-wrapper,
  .suggest-content-wrapper, .common-content-wrapper, .help-content-wrapper,
 .allfriends-content-wrapper, .match-content-wrapper, .dirfind-content-wrapper,
 .delegation-content-wrapper, .notes-content-wrapper,
